# LPCNet

./: CMakeLists.txt  README.md
docker/: Dockerfile  create.sh  entrypoint.sh  run.sh
src/: ceps_codebooks.c  common.h  dump_lpcnet.py  export_lpcnet.py  lpcnet.c  lpcnet.py  lpcnet_demo.c  lpcnet_private.h  mdense.py  nnet.c  nnet.h  nnet_data.c  nnet_data.h  nnet_data_loader.c  nnet_data_loader.h  train_lpcnet.py
